fix bag horizontal scroll

--- a/src/components/Available/Available.module.scss
+++ b/src/components/Available/Available.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 40px;
+  overflow: hidden;
 }
 
 .content {
@@ -13,7 +13,7 @@
 
 .right_container {
   right: 0;
-  margin-right: 200px;
+  margin-right: 220px;
   position: absolute;
   width: 520px;
   height: 520px;
@@ -69,7 +69,7 @@
   .root {
     flex-direction: column;
     gap: 200px;
-    overflow-y: hidden;
+    overflow: hidden;
   }
 
   .content {
