--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,7 @@ body.scroll-lock {
   width: 100%;
   height: 100%;
 }
+
+body{
+	overflow-x: hidden;
+}
